<resources>
    <string name="app_name">GestaoGados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="name_input">Name</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="login_button">Log in</string>
    <string name="logout_button">Log out</string>
    <string name="register_button">Register</string>

    <!--Register activity-->
    <string name="password_retype">Reenter your password:</string>
    <string name="register_activity_header">Register your new account!</string>

    <!--navigation menu-->
    <string name="menu_home">Home</string>
    <string name="menu_consult_bovine">Consult Bovine</string>
    <string name="menu_register_bovine">Register Bovine</string>

    <!--Animal registration fragment-->
    <string name="sex_input">Sex</string>
    <string name="race_input">Race</string>
    <string name="type_input">Type</string>
    <string name="status_input">Status</string>
    <string name="age_input">Age</string>
    <string name="birthdate_input">Birth Date</string>
    <string name="life_phase_input">Life Phase</string>
    <string name="image_input">Image</string>
    <string name="update">Update</string>
    <string name="farm">Farm</string>
    <string name="loot">Loot</string>

    <string name="title_activity_consult_bovine_register">ConsultBovineRegisterActivity</string>


    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="popup_title">Register a new task</string>
    <string name="popup_vaccine">Vaccine</string>
    <string name="popup_task">Task</string>

    <string name="register_generic_task_tittle">Register Generic Task</string>
    <string name="register_vaccine_task_tittle">Register Vaccine</string>
    <string name="vaccine_name">Vaccine Name</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Description</string>
    <string name="location">Location</string>
    <string name="title_register_new_farm">Register a new farm</string>
    <string name="title_popup_new_loot">Register new loot</string>

    <string name="menu_consult_farm">Consult Farm</string>
    <string name="register_new_farm">Register new farm</string>
    <string name="manage_farm">Manage Farm</string>
    <string name="consult">Consult</string>
    <string name="vaccine_consult">Vaccine</string>
    <string name="empty_vaccine_list">No vaccines registered</string>
    <string name="empty_vaccine_list_todo">No vaccines registered to be done</string>
    <string name="vaccine_done">Done</string>

    <string name="vaccine_title_consult">Update Vaccine</string>
    <string name="empty_animals_list">No animals registered</string>
    <string name="animals">Animals</string>
    <string name="next_vaccines">Next Vaccines</string>
    <string name="active_animals">Active Animals</string>
    <string name="vaccine_list">Vaccine List</string>
    <string name="task_list">Task List</string>
    <string name="empty_task_list">No tasks registered</string>
    <string name="task_consult">Task Consult</string>

    <string name="done">done</string>
    <string name="todo">to do</string>

    <string name="title_consult_farm">Consult farm</string>
    <string name="title_consult_task">Consult task</string>
</resources>