<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/va_home"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Animals Register">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_register_bovine"
                android:icon="@drawable/va_register_bovine"
                android:title="@string/menu_register_bovine" />
            <item
                android:id="@+id/nav_consult_bovine"
                android:icon="@drawable/va_consult_bovine"
                android:title="@string/menu_consult_bovine" />
        </menu>
    </item>

    <item android:title="Manage">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_consult_farm_loot"
                android:icon="@drawable/va_register_bovine"
                android:title="@string/manage_farm" />
        </menu>
    </item>
</menu>