<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.udemy.cursoandroid.gestaogados.View.main.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_register_bovine"
        android:name="com.udemy.cursoandroid.gestaogados.View.main.register.RegisterBovineFragment"
        android:label="@string/menu_register_bovine"
        tools:layout="@layout/fragment_register_bovine" />

    <fragment
        android:id="@+id/nav_consult_bovine"
        android:name="com.udemy.cursoandroid.gestaogados.View.main.consult.ConsultBovineFragment"
        android:label="@string/menu_consult_bovine"
        tools:layout="@layout/fragment_consult_bovine" />

</navigation>