<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.farm.RegisterFarmActivity">

    <EditText
        android:id="@+id/nameFarmRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/name_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFarmRegister" />

    <EditText
        android:id="@+id/locationFarmRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameFarmRegister" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintBottom_toTopOf="@+id/locationFarmRegister"
        app:layout_constraintStart_toStartOf="@+id/locationFarmRegister" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lootsListFarmRegister"
        android:layout_width="367dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/saveFarmRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationFarmRegister" />

    <Button
        android:id="@+id/saveFarmRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loot"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/lootsListFarmRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleFarmRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title_register_new_farm"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addLootFarmRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:outlineAmbientShadowColor="@color/black"
        android:tint="@color/black"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/lootsListFarmRegister"
        app:layout_constraintEnd_toEndOf="@+id/lootsListFarmRegister"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@drawable/va_register_bovine" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_input"
        app:layout_constraintBottom_toTopOf="@+id/nameFarmRegister"
        app:layout_constraintStart_toStartOf="@+id/nameFarmRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>