<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.main.consult.ConsultAnimalVaccineActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/openPopupActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/va_register_bovine"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewConsultVaccine"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewConsultTask"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewConsultVaccine" />

    <TextView
        android:id="@+id/emptyVaccineListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_vaccine_list"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewConsultVaccine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewConsultVaccine"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewConsultVaccine" />

    <TextView
        android:id="@+id/emptyTaskListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_task_list"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewConsultTask"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewConsultTask"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewConsultTask"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewConsultTask" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaccine_list"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewConsultVaccine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_list"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewConsultTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewConsultVaccine"
        app:layout_constraintVertical_bias="0.634" />
</androidx.constraintlayout.widget.ConstraintLayout>